# semtools

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  example_semtools_config.json  package-lock.json  package.json
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: build.yml  lint.yml  release.yml  test.yml
.secrets/: dev.env.enc
benchmarks/arxiv/: README.md  download_arxiv_files.py  plain_CLAUDE.md  questions.txt  search_CLAUDE.md
benchmarks/arxiv/answers/a_search_and_filter/: 1.txt  2.txt  3.txt  4.txt  5.txt
benchmarks/arxiv/answers/b_cross_reference_and_relationships/: 1.txt  2.txt  3.txt  4.txt  5.txt
benchmarks/arxiv/answers/c_temporal_analysis/: 1.txt  2.txt  3.txt  4.txt  5.txt
cli/: ask.js  parse.js  search.js  semtools.js  workspace.js
crates/parse/: Cargo.toml  README.md
crates/parse/src/: llama_parse_backend.rs  main.rs
crates/search/: Cargo.toml  README.md
crates/search/src/: main.rs
examples/: README.md  example_CLAUDE.md  use_with_coding_agents.md  use_with_mcp.md  using_lmstudio_backend.md
examples/workflows/: document_knowledge_base.sh  research_workflow.sh
scripts/: install.js
src/: config.rs  json_mode.rs  lib.rs  llama_parse_backend.rs
src/ask/: agent.rs  chat_agent.rs  mod.rs  responses_agent.rs  system_prompt.rs  tool_calling.rs  tools.rs
src/cmds/: ask.rs  mod.rs  parse.rs  search.rs  workspace.rs
src/parse/: backend.rs  backend_trait.rs  cache.rs  client.rs  config.rs  error.rs  lmstudio_backend.rs  mod.rs
src/search/: mod.rs
src/workspace/: mod.rs  store.rs
