[package]
name = "semtools"
version = "1.3.0"
edition = "2024"
license = "MIT"
description = "Semantic search and document parsing tools for the command line"
repository = "https://github.com/run-llama/semtools"
authors = ["Logan Markewich <logan@runllama.ai>"]
categories = ["command-line-utilities", "text-processing"]
keywords = ["semantic-search", "document-parsing", "cli", "pdf", "search"]
readme = "README.md"

[[bin]]
name = "parse"
path = "src/bin/parse.rs"
required-features = ["parse"]

[[bin]]
name = "search"  
path = "src/bin/search.rs"
required-features = ["search"]

[[bin]]
name = "workspace"
path = "src/bin/workspace.rs"
required-features = ["workspace"]

[dependencies]
# Common dependencies
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
futures = "0.3.31"

# Parse-specific dependencies
reqwest = { version = "0.12.23", features = ["multipart", "json", "rustls-tls"], default-features = false, optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.143", optional = true }
tokio = { version = "1.47.1", features = ["full"], optional = true }
sha2 = { version = "0.10.8", optional = true }
hex = { version = "0.4.3", optional = true }
mime_guess = { version = "2.0.5", optional = true }
dirs = { version = "5.0.1", optional = true }

# Search-specific dependencies
model2vec-rs = { version = "0.1.3", optional = true }
simsimd = { version = "6.5.1", optional = true }

# Workspace-specific dependencies
lancedb = { version = "0.22.0", default-features = false, optional = true }
arrow-schema = { version = "55.2.0", optional = true }
arrow-array = { version = "55.2.0", optional = true }
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
tempfile = "3.14.0"

[features]
default = ["parse", "search", "workspace"]
parse = ["reqwest", "serde", "serde_json", "tokio", "sha2", "hex", "mime_guess", "dirs"]
search = ["model2vec-rs", "simsimd"]
workspace = ["dirs", "serde", "serde_json", "tokio", "lancedb", "arrow-schema", "arrow-array", "rand"]
