[package]
name = "parse"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Parse text into structured data"
repository = "https://github.com/run-llama/semtools"
authors = ["Logan Markewich <logan@runllama.ai>"]
categories = ["parse"]
keywords = ["parse", "text", "structured data"]
readme = "README.md"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["multipart", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
sha2 = "0.10.8"
hex = "0.4.3"
mime_guess = "2.0.5"
dirs = "5.0.1"
