[package]
name = "parse"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parse text into structured data"
repository.workspace = true
authors.workspace = true
categories = ["parse"]
keywords = ["parse", "text", "structured data"]
readme = "README.md"
publish = false  # Published as part of the unified semtools package

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest = { version = "0.12.23", features = ["multipart", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
sha2 = "0.10.8"
hex = "0.4.3"
mime_guess = "2.0.5"
dirs = "5.0.1"
