[package]
name = "search"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Search for text in files, but smarter"
repository.workspace = true
authors.workspace = true
categories = ["search"]
keywords = ["search", "text", "files"]
readme = "README.md"
publish = false  # Published as part of the unified semtools package

[dependencies]
clap.workspace = true
model2vec-rs = "0.1.3"
anyhow.workspace = true
simsimd = "6.5.1"
